--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,7 @@ test:
 #
 production:
   <<: *default
-  database: monissl
-  username: monissl
-
+  host: postgres
+  database: telescope
+  username: telescope
+  password: telescope
